clang/test/BSC/Negative/SafeZone/duplicate_declspec/duplicate_declspec.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Safe _Safe int add(int x, int y) {  // expected-error {{duplicate '_Safe' declaration specifier}}
  return x + y;
}

_Unsafe _Safe int sub(int x, int y) {  // expected-error {{duplicate '_Unsafe' declaration specifier}}
  return x - y;
}

_Safe _Safe int (*p)(int a);    // expected-error {{duplicate '_Safe' declaration specifier}}
_Unsafe _Safe int (*q)(int a);  // expected-error {{duplicate '_Unsafe' declaration specifier}}

typedef _Safe _Safe int (*m)(int a);      // expected-error {{duplicate '_Safe' declaration specifier}}
typedef _Unsafe _Unsafe int (*n)(int a);  // expected-error {{duplicate '_Unsafe' declaration specifier}}

int main()
{
  _Safe _Safe {      // expected-error {{duplicate '_Safe' declaration specifier}}
    int a = 1;
  }
  _Unsafe _Safe {  // expected-error {{duplicate '_Unsafe' declaration specifier}}
    int b = 1;
  }
  _Safe _Safe int (*r)(int a);    // expected-error {{duplicate '_Safe' declaration specifier}}
                                // expected-error@-1 {{uninitialized declarator is forbidden in the safe zone}}
  _Unsafe _Safe int (*s)(int a);  // expected-error {{duplicate '_Unsafe' declaration specifier}}
                                // expected-error@-1 {{uninitialized declarator is forbidden in the safe zone}}

return 0;
}